feat: адаптировать тесты для запуска в многопоточном режиме

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,8 @@
                     <systemPropertyVariables>
                         <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                     </systemPropertyVariables>
+                    <parallel>classesAndMethods</parallel>
+                    <threadCount>4</threadCount>
                 </configuration>
             </plugin>
             <plugin>
